package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_nodejs//:defs.bzl", "node_modules_filegroup")

exports_files([
    "tsconfig.json",
    "LICENSE",
])

# Developers should always run `bazel run :install`
# This ensures that package.json in subdirectories get installed as well.
alias(
    name = "install",
    actual = "@yarn//:yarn",
)
