package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_nodejs//:defs.bzl", "node_modules_filegroup")

# This rule belongs in node_modules/BUILD
# It's here as a workaround for
# https://github.com/bazelbuild/bazel/issues/374#issuecomment-296217940
filegroup(
  name = "node_modules",
  # Performance workaround: list individual files
  # Reduces the number of files as inputs to nodejs_binary:
  # bazel query "deps(:node_modules)" | wc -l
  # This won't scale in the general case.
  srcs = glob(["/".join(["node_modules", pkg, "**", ext]) for pkg in [
    "@types",
    "jasmine",
    "reflect-metadata",
    "rxjs",
    "tslib",
    "typescript",
  ] for ext in [
    "*.js",
    "*.json",
    "*.d.ts",
  ]]),
)

exports_files([
    "tsconfig.json",
    "LICENSE",
])

# Developers should always run `bazel run :install`
# This ensures that package.json in subdirectories get installed as well.
alias(
    name = "install",
    actual = "@yarn//:yarn",
)
