package(default_visibility=["//visibility:public"])
load("@build_bazel_rules_typescript//:defs.bzl", "ts_library", "ts_web_test")

ts_library(
  name = "z_easing_sources",
  testonly = True,
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@gradii/z-easing",
  deps = [
  ],
  tsconfig = "//libs/z-easing:tsconfig-build.json",
)

#ts_web_test(
#  name = "unit_tests",
#  tags = ["manual"],
#  bootstrap = [
#    "//:web_test_bootstrap_scripts",
#  ],
#  # Do not sort
#  deps = [
#
#  ],
#)
